fixed mobile nav z-index

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -29,6 +29,7 @@
                 right: 0;
                 margin: auto;
                 border-radius: .3rem;
+                z-index: 99;
     
                 &.show {
                     top: 5rem;
