--- a/style/_main.scss
+++ b/style/_main.scss
@@ -8,7 +8,7 @@ main {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    
+    border: 1px solid red;
 
     .main_logo {
         position: relative;
